--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+header{
+  position: fixed;
+  background-color: #33383b;
+  color: cornsilk;
+  text-align: center;
+  width: 100%;
+  z-index: 1;
+  padding: 20px;
+}
+
+nav{
+  position: fixed;
+  margin-top: 60px;
+  background-color: #eeeeee;
+  width: 150px;
+  float: left;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section{
+  margin-left: 150px ;
+  margin-top: 80px ;
+  float: left;
+  padding: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subSection{
+  margin-left: 150px ;
+  margin-right: 150px;
+  margin-top: 20px;
 }
