--- a/src/component/Navigation/Navigation.css
+++ b/src/component/Navigation/Navigation.css
@@ -4,8 +4,14 @@
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 45px;
   background-color: #33383b;
+}
+a,a:hover,a:active,a:visited,a:link,a:focus{
+  width: 100%;
+  outline:none;
+  background: none;
+  text-decoration: none;
+  color: inherit;
 }
 .m-navigation .is_visible {
   display: block !important;
@@ -197,6 +203,7 @@
   cursor: pointer;
   vertical-align: middle;
 }
+
 .m-navigation .m-navigation-row .m-navigation-col > img {
   padding: 0px 10px 0px 5px;
   width: 15px;
@@ -336,6 +343,7 @@
   -moz-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
+  color: #464e50;
 }
 .m-navigation .m-navigation-row.m-navigation-subrow-1 .m-navigation-submenu > img.m-navigation-subicon {
   /*content: url("image/navi/2-dep-normal.svg");*/
@@ -349,7 +357,7 @@
   color: #7d868c;
 }
 .m-navigation .m-navigation-row.m-navigation-subrow-1 .m-navigation-submenu:hover span {
-  color: #333333 !important;
+  color: #c2a569 !important;
 }
 .m-navigation .m-navigation-row.m-navigation-subrow-1 .m-navigation-submenu:hover > img.m-navigation-subicon {
   /*content: url("image/navi/2-dep-over.svg");*/
@@ -703,4 +711,35 @@
 }
 .m-navigation.theme-access .m-navigation-row.m-navigation-subrow-3 .is-selected > img.m-navigation-subicon {
   /*content: url("image/navi/2-dep-purple.svg");*/
+}
+.isul-page-head-panel {
+  margin-top: 10px;
+  margin-bottom: 16px; }
+.isul-page-head-panel span:nth-child(n+2) {
+  font-size: 15px;
+  font-weight: 500;
+  color: #666666; }
+.isul-page-head-panel span:nth-child(2n) {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px; }
+.isul-page-head-panel a:link {
+  color: inherit;
+  text-decoration: none; }
+.isul-page-head-panel a:visited {
+  color: inherit;
+  text-decoration: none; }
+.isul-page-head-panel a:hover {
+  color: black;
+  text-decoration: none; }
+.isul-page-title-subUrl-selected {
+  color: #ba81b8 !important; }
+.isul-page-title-font {
+  font-size: 25px;
+  font-weight: 300; }
+.isul-page-title-font.channel {
+  padding-right: 15px; }
+.title-name{
+  padding-left: 8px;
+  padding-right: 8px;
 }
